--- a/configer.service
+++ b/configer.service
@@ -3,7 +3,8 @@ Description=configer service
 After=multi-user.target
 [Service]
 Type=simple
-Restart=always
+Restart=on-failure
+RestartSec=10
 ExecStart=/usr/bin/python3 /root/configer.py
 [Install]
 WantedBy=multi-user.target
